fix(loading screen): loading screen overflow fix

--- a/src/Components/pages/App/App.css
+++ b/src/Components/pages/App/App.css
@@ -1,8 +1,10 @@
-html, body
-{
+* {
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+}
+
+body,
+html {
     scroll-behavior: smooth;
-    overflow-x: hidden;
-    overflow-y: scroll;
 }
 
 ::-webkit-scrollbar {
